fixed wrong url link to tests of some selected category on tests_lists.html template; amount of tests on one page has been increased to 35 on tests view; amount showing links to pages in pagination has increased to 5 on tests view; sorting and filtering form has been moved to list_with_pagination.html template, and its styles have been moved to list_with_pagination.sass; left_number_of_popular_tests context variable for tests_lists.html template --> left_number_of_rating_tests; right_number_of_popular_tests context variable for tests_lists.html template --> right_number_of_rating_tests; wrong value of sorting HTTP parameter (sorting=rating_asc --> sorting=rating_desc) has been fixed; option tags of sorting and filtering form have been corrected; added assigning of '1' to page if there is no page on tests view ('1' before); on tests_lists page parameter for ulr has been removed; vertical-align: middle style property has been added to .test_wrapper of tests.sass; order of tests on 'if sorting == 'rating_desc':' condition at tests view has been fixed (): before: tests = all_published_tests.filter(published_date__lte=timezone.now()).order_by('rating', 'name') after: tests = all_published_tests.filter(published_date__lte=timezone.now()).order_by('-rating', 'name')

--- a/octapp/static/octapp/css/list_with_pagination.sass
+++ b/octapp/static/octapp/css/list_with_pagination.sass
@@ -7,3 +7,42 @@
   padding: 0
   li:not(.active) *
     color: #337ab7
+
+form.sort_filter_form
+  width: 100%
+  padding: 8px
+  label.relative
+    padding-left: 20px
+    input[type="checkbox"]
+      position: absolute
+      top: 3px
+      left: 4px
+  input[type="submit"]
+    width: 100%
+    margin: 0
+    white-space: normal
+  select
+    width: 100%
+
+.dropdown
+  padding-right: 8px
+  button
+    width: 100%
+
+/*============    	АДАПТИВ    ===========*/
+
+@media(min-width:0px) and (max-width:767px)
+  .dropdown
+    width: 100%
+
+@media(min-width:768px) and (max-width:991px)
+  .dropdown
+    width: 50%
+
+@media(min-width:992px) and (max-width:1199px)
+  .dropdown
+    width: 32%
+
+@media(min-width:1200px)
+  .dropdown
+    width: 25%
