--- a/octapp/static/octapp/css/tests.sass
+++ b/octapp/static/octapp/css/tests.sass
@@ -6,28 +6,10 @@
 .test_wrapper
   padding: 4px
   text-align: center
+  vertical-align: middle
 
 .name_of_test
   margin: 0
-
-form.sort_filter_form
-  width: 100%
-  padding: 8px
-  label.relative
-    padding-left: 20px
-    input[type="checkbox"]
-      position: absolute
-      top: 3px
-      left: 4px
-  input[type="submit"]
-    width: 100%
-    margin: 0
-    white-space: normal
-
-.dropdown
-  padding-right: 8px
-  button
-    width: 100%
 
 /*============    	АДАПТИВ    ===========*/
 
@@ -35,15 +17,11 @@ form.sort_filter_form
   .test_wrapper
     width: 100%
     margin: 0
-  .dropdown
-    width: 100%
 
 @media(min-width:768px) and (max-width:991px)
   .test_wrapper
     width: 50%
     margin: 0
-  .dropdown
-    width: 50%
 
   .test_wrapper:nth-of-type(2n)
     margin-left: -5px
@@ -52,8 +30,6 @@ form.sort_filter_form
   .test_wrapper
     width: 32%
     margin: 0
-  .dropdown
-    width: 32%
 
   .test_wrapper:nth-of-type(3n)
     margin-left: -5px
@@ -62,8 +38,6 @@ form.sort_filter_form
   .test_wrapper
     width: 25%
     margin: 0
-  .dropdown
-    width: 25%
 
   .test_wrapper:nth-of-type(4n)
     margin-left: -10px
